@startuml

title __BUILDER's Class Diagram__\n

  namespace designPatterns.creational.builder {
    class designPatterns.creational.builder.Director {
        + createStudent()
        ~ Director()
        - createEngineeringStudent()
        - createMBAStudent()
    }
  }
  

  namespace designPatterns.creational.builder {
    class designPatterns.creational.builder.EngineeringStudentBuilder {
        + setSubjects()
    }
  }
  

  namespace designPatterns.creational.builder {
    class designPatterns.creational.builder.MBAStudentBuilder {
        + setSubjects()
    }
  }
  

  namespace designPatterns.creational.builder {
    class designPatterns.creational.builder.Main {
        {static} + main()
    }
  }
  

  namespace designPatterns.creational.builder {
    class designPatterns.creational.builder.Student {
        ~ age : int
        ~ fatherName : String
        ~ motherName : String
        ~ name : String
        ~ rollNumber : int
        ~ subjects : List<String>
        + Student()
        + toString()
    }
  }
  

  namespace designPatterns.creational.builder {
    abstract class designPatterns.creational.builder.StudentBuilder {
        ~ age : int
        ~ fatherName : String
        ~ motherName : String
        ~ name : String
        ~ rollNumber : int
        ~ subjects : List<String>
        + build()
        + setAge()
        + setFatherName()
        + setMotherName()
        + setName()
        + setRollNumber()
        {abstract} + setSubjects()
    }
  }
  

  designPatterns.creational.builder.Director o-- designPatterns.creational.builder.StudentBuilder : studentBuilder
  designPatterns.creational.builder.EngineeringStudentBuilder -up-|> designPatterns.creational.builder.StudentBuilder
  designPatterns.creational.builder.MBAStudentBuilder -up-|> designPatterns.creational.builder.StudentBuilder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
